[gd_scene load_steps=19 format=3 uid="uid://bhw5baew0itp5"]

[ext_resource type="Script" uid="uid://gwwtgthvydc6" path="res://actual game/scenes/ballroom.gd" id="1_r8dgj"]
[ext_resource type="Texture2D" uid="uid://dkx4u8dbu3i30" path="res://actual game/Assets/bg.png" id="2_eg7oi"]
[ext_resource type="Texture2D" uid="uid://vydp1y4tu4ev" path="res://actual game/Assets/Characters/Untitled_Artwork.png" id="3_mtv8q"]
[ext_resource type="Texture2D" uid="uid://njtdtrvgoj2d" path="res://actual game/Assets/Characters/Pierrot.png" id="4_b6i6o"]
[ext_resource type="FontFile" uid="uid://cvqoidi4qslw" path="res://actual game/Assets/Fonts/PirataOne-Regular.ttf" id="4_c7cqp"]
[ext_resource type="Texture2D" uid="uid://b00vabqjhgh2m" path="res://actual game/Assets/Masks/Mask_Colombina.png" id="5_n1on7"]
[ext_resource type="Texture2D" uid="uid://c58gnjfr7shcg" path="res://actual game/Assets/Masks/Mask_Colombina_hover.png" id="6_6v302"]
[ext_resource type="FontFile" uid="uid://bmgwjoq4e66nb" path="res://actual game/Assets/Fonts/Alegreya/Alegreya-VariableFont_wght.ttf" id="6_cl0dy"]
[ext_resource type="FontFile" uid="uid://dududt788b8ta" path="res://actual game/Assets/Fonts/Alegreya/static/Alegreya-Italic.ttf" id="7_6v302"]
[ext_resource type="FontFile" uid="uid://bdxdfc8m80qvm" path="res://actual game/Assets/Fonts/Alegreya/static/Alegreya-Bold.ttf" id="8_xqjiv"]
[ext_resource type="Texture2D" uid="uid://bts14giljq63a" path="res://actual game/Assets/Masks/Mask_Gnaga.png" id="9_nxnfu"]
[ext_resource type="Texture2D" uid="uid://k5rcqvrsqv3t" path="res://actual game/Assets/Masks/Mask_Moon.png" id="10_r8dgj"]
[ext_resource type="Texture2D" uid="uid://r2ipakko2yxu" path="res://actual game/Assets/Masks/Mask_Dottore.png" id="11_dgom3"]
[ext_resource type="Texture2D" uid="uid://cdl24jf4x8o1a" path="res://actual game/Assets/Masks/Mask_Gnaga_hover.png" id="11_nxnfu"]
[ext_resource type="Texture2D" uid="uid://cu52tkldd807i" path="res://actual game/Assets/Masks/Mask_Moon_hover.png" id="13_r8dgj"]
[ext_resource type="Texture2D" uid="uid://bgbou42rad7wg" path="res://actual game/Assets/Masks/Mask_Dottore_hover.png" id="15_dgom3"]

[sub_resource type="Theme" id="Theme_eg7oi"]
default_font = ExtResource("4_c7cqp")
default_font_size = 60

[sub_resource type="Theme" id="Theme_8v2cx"]
default_font = ExtResource("6_cl0dy")
default_font_size = 36

[node name="Ballroom (select)" type="Node2D"]
script = ExtResource("1_r8dgj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(572, 330)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_eg7oi")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 24.0
offset_top = 418.0
offset_right = 453.0
offset_bottom = 1118.0
texture_normal = ExtResource("4_b6i6o")
texture_hover = ExtResource("4_b6i6o")

[node name="TextureButton" type="TextureButton" parent="TextureButton"]
layout_mode = 0
offset_left = 1383.0
offset_top = -739.0
offset_right = 2791.0
offset_bottom = 1563.0
scale = Vector2(0.29634, 0.29634)
texture_normal = ExtResource("3_mtv8q")
texture_hover = ExtResource("3_mtv8q")

[node name="MaskSelection" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="MaskSelection"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.215686, 0.211765, 0.2, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="MaskSelection"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 483.0
offset_top = 127.0
offset_right = 1523.0
offset_bottom = 227.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_eg7oi")
bbcode_enabled = true
text = "Select Your Mask For the Night"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColombinaButton" type="TextureButton" parent="MaskSelection"]
unique_name_in_owner = true
offset_left = 40.0
offset_top = 172.0
offset_right = 1150.0
offset_bottom = 1628.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("5_n1on7")
texture_pressed = ExtResource("5_n1on7")
texture_hover = ExtResource("6_6v302")

[node name="Colombina_text" type="RichTextLabel" parent="MaskSelection/ColombinaButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -367.5
offset_top = 1060.0
offset_right = -67.5
offset_bottom = 1160.0
grow_horizontal = 2
scale = Vector2(2.7, 2.7)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_eg7oi")
bbcode_enabled = true
text = "Colombina"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MaskSelection/ColombinaButton"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 0
offset_left = 105.0
offset_top = 1415.0
offset_right = 605.0
offset_bottom = 1715.0
scale = Vector2(2, 2)
theme = SubResource("Theme_8v2cx")
theme_override_fonts/italics_font = ExtResource("7_6v302")
theme_override_fonts/bold_font = ExtResource("8_xqjiv")
bbcode_enabled = true
text = "The sweet dove [b]Colombina[/b] can charm even the coldest of hearts, yet her youthful countenance is easily overlooked. 

[b]Effect: [/b] Charm"
horizontal_alignment = 1

[node name="GnagaButton" type="TextureButton" parent="MaskSelection"]
unique_name_in_owner = true
offset_left = 966.0
offset_top = 172.0
offset_right = 2076.0
offset_bottom = 1628.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("9_nxnfu")
texture_pressed = ExtResource("9_nxnfu")
texture_hover = ExtResource("11_nxnfu")

[node name="Gnaga_text" type="RichTextLabel" parent="MaskSelection/GnagaButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -367.5
offset_top = 1060.0
offset_right = -67.5
offset_bottom = 1160.0
grow_horizontal = 2
scale = Vector2(2.7, 2.7)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_eg7oi")
bbcode_enabled = true
text = "Gnaga"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MaskSelection/GnagaButton"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 0
offset_left = 105.0
offset_top = 1414.5
offset_right = 605.0
offset_bottom = 1748.5
scale = Vector2(2, 2)
theme = SubResource("Theme_8v2cx")
theme_override_fonts/italics_font = ExtResource("7_6v302")
theme_override_fonts/bold_font = ExtResource("8_xqjiv")
bbcode_enabled = true
text = "This feline mask grants you catlike grace and perception beyond that of mere human eyes. Some find its tone grating.

[b]Effect: [/b] Perception"
horizontal_alignment = 1

[node name="SunandMoonButton" type="TextureButton" parent="MaskSelection"]
unique_name_in_owner = true
offset_left = 1423.0
offset_top = 160.0
offset_right = 2533.0
offset_bottom = 1616.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("10_r8dgj")
texture_pressed = ExtResource("10_r8dgj")
texture_hover = ExtResource("13_r8dgj")

[node name="SunMoon_text" type="RichTextLabel" parent="MaskSelection/SunandMoonButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -447.0
offset_top = 1060.0
offset_right = -67.0
offset_bottom = 1216.0
grow_horizontal = 2
scale = Vector2(2.7, 2.7)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_eg7oi")
bbcode_enabled = true
text = "Sun-and-Moon"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MaskSelection/SunandMoonButton"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 0
offset_left = 105.0
offset_top = 1415.0
offset_right = 605.0
offset_bottom = 1765.0
scale = Vector2(2, 2)
theme = SubResource("Theme_8v2cx")
theme_override_fonts/italics_font = ExtResource("7_6v302")
theme_override_fonts/bold_font = ExtResource("8_xqjiv")
bbcode_enabled = true
text = "The mask of the Wolves of Twilight glints in sinister silver. Its authority undeniable, your target will be compelled to speak the truth – at what cost?

[b]Effect: [/b] Authority"
horizontal_alignment = 1

[node name="DottoreButton" type="TextureButton" parent="MaskSelection"]
unique_name_in_owner = true
offset_left = 499.0
offset_top = 172.0
offset_right = 1609.0
offset_bottom = 1628.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("11_dgom3")
texture_pressed = ExtResource("11_dgom3")
texture_hover = ExtResource("15_dgom3")

[node name="Dottore_text" type="RichTextLabel" parent="MaskSelection/DottoreButton"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -367.5
offset_top = 1060.0
offset_right = -67.5
offset_bottom = 1160.0
grow_horizontal = 2
scale = Vector2(2.7, 2.7)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_eg7oi")
bbcode_enabled = true
text = "Dottore"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MaskSelection/DottoreButton"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 0
offset_left = 105.0
offset_top = 1350.0
offset_right = 605.0
offset_bottom = 1750.0
scale = Vector2(2, 2)
theme = SubResource("Theme_8v2cx")
theme_override_fonts/italics_font = ExtResource("7_6v302")
theme_override_fonts/bold_font = ExtResource("8_xqjiv")
bbcode_enabled = true
text = "Learned as the owl himself, the Doctor’s mask helps you recall facts and figures. 
But will booksmarts bore an audience as fickle as the court of Queen Serena? 
[b]Effect: [/b] Scholarly Pursuits"
horizontal_alignment = 1

[connection signal="button_down" from="MaskSelection/ColombinaButton" to="." method="_on_colombina_button_button_down"]
[connection signal="pressed" from="MaskSelection/GnagaButton" to="." method="_on_gnaga_button_pressed"]
[connection signal="pressed" from="MaskSelection/SunandMoonButton" to="." method="_on_sunand_moon_button_pressed"]
[connection signal="pressed" from="MaskSelection/DottoreButton" to="." method="_on_dottore_button_pressed"]
